--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ ul{
 header{
     width: 100vw;
     height: 100vh;
-    background-image: url("../image/buzzastral1.jpg");
+    background: linear-gradient(to bottom,rgba(0,0,0, 0), rgba(0,0,0, 100)),url("../image/buzzastral1.jpg");
     -webkit-background-size: cover;
     background-position: bottom;
     background-size: cover;
@@ -65,12 +65,19 @@ header{
     background: blanchedalmond;
     border-radius: 5px;
 }
+.login{
+    padding: 25px 35px;
+    background: darkkhaki;
+    border-radius: 30px;
+    color: whitesmoke;
+    font-size: 19;
+}
 .buy{
     padding: 25px 35px;
     background: darkkhaki;
     border-radius: 30px;
     color: whitesmoke;
-    font-size: medium;
+    font-size: 20;
 }
 .menu-btn{
     position: absolute;
@@ -96,7 +103,9 @@ section{
     width: 100%;
     justify-content: space-between;
     color: whitesmoke;
+    position: relative;
 }
+
 .row .col {
     display: flex;
     flex-direction: column;
@@ -107,7 +116,27 @@ section{
     opacity: 1;
 }
 .col img:hover{
-    opacity: 0.3;
+    opacity: .3;
+}
+.button {
+    position: absolute;
+    width: 180px;
+    left:auto;
+    top:50%;
+    text-align: center;
+    opacity: 0;
+    transition: opacity .35s ease;
+}
+.button a {
+    width: 200px;
+    padding: 12px 48px;
+    text-align: center;
+    color: white;
+    border: solid 2px white;
+    z-index: 1;
+}
+.col:hover .button {
+    opacity: 1;
 }
 
 /* Mobile */
