--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ section{
 }
 .button {
     position: absolute;
-    width: 180px;
+    width: 250px;
     left:auto;
     top:50%;
     text-align: center;
@@ -154,6 +154,9 @@ section{
     border: solid 2px white;
     z-index: 1;
 }
+.button:hover {
+    opacity: 0.3;
+}
 .col:hover .button {
     opacity: 1;
 }
@@ -161,7 +164,11 @@ section{
 /* Mobile */
 @media only screen and (max-width:850px) {
     .menu-btn{
+        position: absolute;
         display: block;
+        width: 120px;
+        height: 100px;
+        z-index: 2;
     }
     .navbar{
         padding: 0;
@@ -170,15 +177,18 @@ section{
         position: absolute;
         top: 30px;
         left: 30px;
+        z-index: 2;
     }
     .nav-links{
+        position: absolute;
         flex-direction: column;
         width: 100%;
         height: 100vh;
         justify-content: center;
         background: darkcyan;
-        margin-top: -900px;
+        margin-top: -820px;
         transition: all 0.5s ease;
+        z-index: 1;
     }
     .mobile-menu{
         margin-top: 0px;
@@ -337,16 +347,18 @@ blockquote {
 }
 .films-page{
     width: 75%;
+    margin-top: 270px;
 }
 .films-page img{
     border-radius: 24px;
-    margin-top: 150px;
+   
 }
 .films-page row{
     list-style: none;
+    
 }
 .films-col{
-    margin-top: 150px;
+   
     max-width: 550px;
 }
 .details li{
@@ -367,7 +379,7 @@ blockquote {
 }
 .films-col p{
     font-size: 20px;
-    
+    margin-bottom: 150px;
 }
 .films-col h2{
     margin-right: 313px;
@@ -403,4 +415,156 @@ blockquote {
 }
 .films-col .reservation:hover{
     border: 2px solid yellow;
+}
+.reservation-page{
+    margin-top: 250px;
+    width: 55%;
+    color: whitesmoke;
+    border: 0;
+    background: none;
+    display: block;
+    font-size: 27px;
+    text-align:left;
+    border: 2px solid #3498db;
+    padding: 14px 40px;
+    outline: none;
+    border-radius: 24px;
+    transition: 0.25s;
+    background-color: ;
+}
+.movie-container {
+    margin: 209px 0;
+    color: whitesmoke;
+    
+}
+.movie-container option {
+    background: black;
+    border: 0;
+    color: ;
+    border-radius: 5px;
+    font-size: 16px;
+    margin-left: 10px;
+    margin-bottom: 20px;
+    padding: 5px 15px 5px 15px;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+}
+.reservation-page button{
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #3498db;
+    padding: 14px 40px;
+    outline: none;
+    color: whitesmoke;
+    border-radius: 24px;
+    transition: 0.25s;
+    cursor: pointer;
+}
+
+.container {
+    perspective: 1000px;
+    margin-bottom: 30px;
+    margin-top: 50px;
+    text-align: center;
+    
+}
+  
+.seat {
+    background-color: #444451;
+    height: 26px;
+    width: 32px;
+    margin: 6px;
+    font-size: 50px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+  
+.seat.selected {
+    background-color: green;
+}
+  
+.seat.sold {
+    background-color: #fff;
+}
+  
+.seat:nth-of-type(2) {
+    margin-right: 18px;
+}
+  
+.seat:nth-last-of-type(2) {
+    margin-left: 18px;
+}
+  
+.seat:not(.sold):hover {
+    cursor: pointer;
+    transform: scale(1.2);
+}
+  
+.showcase .seat:not(.sold):hover {
+    cursor: default;
+    transform: scale(1);
+}
+  
+.showcase {
+    
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: #777;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+}
+  
+.showcase li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 30 10px;
+}
+.showcase li small {
+    margin-left: 2px;
+}
+  
+.row-reservation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+  
+.screen {
+    background-color: #fff;
+    height: 120px;
+    width: 300px;
+    margin: 15px auto;
+    align-items: center;
+    justify-content: center;
+    display:flex;
+    box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
+}
+  
+p.text{
+      margin: 5px 0;
+      color: whitesmoke;
+      text-align: center;
+}
+  
+p.text span{
+      color: rgb(158, 248, 158);
+}
+.row-reservation .seatnb{
+    margin: 12px;
+    font-size: 32px;
+}
+.row-reservation .seat-nb{
+    color: whitesmoke;
+}
+.row-reservation .seatnb:nth-of-type(2) {
+    margin-right: 32px;
+}
+.row-reservation .seatnb:nth-last-of-type(2) {
+    margin-left: 28px;
 }
