--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
     background: linear-gradient(110deg, black 60%, #0D0D0D 60%);
 }
 
+/* navbar */
 nav img{
     margin: 0 100px;
     height: 140px;
@@ -49,6 +50,8 @@ ul{
 .nav-links li{
     margin: 0 20px;
 }
+
+/* strona główna home */
 header{
     width: 100vw;
     height: 100vh;
@@ -76,6 +79,12 @@ header{
     background: blanchedalmond;
     border-radius: 5px;
 }
+.lineShort{
+    width: 100px;
+    height: 4px;
+    background: blanchedalmond;
+    border-radius: 5px;
+}
 .login{
     padding: 10px 20px;
     background: #606c38;
@@ -88,6 +97,39 @@ header{
 .login:hover{
     background: darkkhaki;
 }
+
+/* dropdown menu po zalogowaniu */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #606c38;
+    border-radius: 15px;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 25px;
+}
+  
+
+.dropdown-content a:hover {
+    background-color: darkkhaki;
+    border-radius: 15px;
+}
+.show {display:block;}
+
+
 .buy{
     padding: 15px 35px;
     background: olive;
@@ -106,6 +148,7 @@ header{
     cursor: pointer;
     display: none;
 }
+
 /* Repertuar */
 section{
     width: 65%;
@@ -153,6 +196,7 @@ section{
     color: white;
     border: solid 2px white;
     z-index: 1;
+    font-size: 17px;
 }
 .button:hover {
     opacity: 0.3;
@@ -237,7 +281,7 @@ section{
     font-size: 12px;
     color: #edf0f1;
 }
-
+/* zawartość strony about */
 .about{
     width: 75%;
     margin: 250px auto;
@@ -292,6 +336,8 @@ blockquote {
     width: 50%;
     margin-top: 20px;
 }
+
+/* zawartość strony Kontakt */
 .mapouter{
     margin-top: 60px;
 }
@@ -302,6 +348,8 @@ blockquote {
     font-size: 35px;
     margin-top: 40px;
 }
+
+/* Logowanie */
 .login-form, .signup-form{
    width: 300px;
    padding: 40px;
@@ -345,6 +393,8 @@ blockquote {
     font-style: italic;
     text-decoration: underline;
 }
+
+/* strony z poszczególnymi filmami */
 .films-page{
     width: 75%;
     margin-top: 270px;
@@ -416,6 +466,8 @@ blockquote {
 .films-col .reservation:hover{
     border: 2px solid yellow;
 }
+
+/* strona z rezerwacjami */
 .reservation-page{
     margin-top: 250px;
     width: 55%;
@@ -567,4 +619,19 @@ p.text span{
 }
 .row-reservation .seatnb:nth-last-of-type(2) {
     margin-left: 28px;
+}
+.your-reservation{
+    margin-top: 250px;
+}
+.your-reservation .myReservationRow{
+    margin-top: 25px;
+    font-size: 25px;
+    color: whitesmoke;
+}
+.finalText{
+    text-align: center;
+    
+}
+.linkUser{
+    color: #3498db;
 }
